# datawarrior_saturate_Murcko_scaffolds

./: .gitignore  .pre-commit-config.yaml  Makefile  MurckoScaffold_bondOrder_one.py  README.md  README.org  pyproject.toml  pytest.ini  requirements-dev.txt  saturate_MurckoScaffolds.py  saturate_murcko_scaffolds.py  test.py  test_saturate_murcko_scaffolds.py  tox.ini
.github/workflows/: build_wheel.yml  pytest.yml  pytest_mypy.yml  tox.yml
demo/: input_sat.smi  series.py
saturated_scaffolds/: saturated_Murcko_scaffold.csv
src/saturate_murcko_scaffolds/: saturate_murcko_scaffolds.py
test_data/: test_input.smi  test_input_sat.smi  test_series.py
tests/: test.py  test_blackbox.py  test_saturate_murcko_scaffolds.py  test_with_imports.py
