[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturate_murcko_scaffolds"
version = "1.3.1"
requires-python = ">=3.13"
authors = [
    { name="Norwid Behrnd", email="nbehrnd@yahoo.com" }
]
description = "saturate Murcko scaffolds assigned by DataWarrior as SMILES strings"
readme = "README.md"

license-files = ["LICENSE"]
keywords = ["datawarrior", "scaffold"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = []  # None (intentionally only Python's standard library)

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "flake8",
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/nbehrnd/datawarrior_saturate_Murcko_scaffolds"

[project.scripts]
saturate_murcko_scaffolds = "saturate_murcko_scaffolds.saturate_murcko_scaffolds:main"


