[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saturate_murcko_scaffolds"
version = "1.3.1"
requires-python = ">=3.13"
authors = [
    { name="Norwid Behrnd", email="nbehrnd@yahoo.com" }
]
description = "saturate Murcko scaffolds assigned by DataWarrior as SMILES strings"
readme = "README.md"

license-files = ["LICENSE"]
keywords = ["datawarrior", "scaffold"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = []  # None (intentionally only Python's standard library)

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "flake8>=7.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

[project.urls]
Homepage = "https://github.com/nbehrnd/datawarrior_saturate_Murcko_scaffolds"

[project.scripts]
saturate_murcko_scaffolds = "saturate_murcko_scaffolds.saturate_murcko_scaffolds:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"
filterwarnings = "ignore::pytest.PytestCacheWarning"
markers = [
    "blackbox: a black-box test",
    "imported: a test which imports a function of the script",
]

